fix: 레디스 종료 및 오류 발생을 대비한 방어로직 구현